--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,20 @@
             "email": "midstackdev@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "erusev/parsedown": "^1.7"
+    },
     "require-dev": {
         "orchestra/testbench": "^5.1"
+    },
+    "autoload" : {
+        "psr-4": {
+            "Midstackdev\\Press\\": "src/"
+        }
+    },
+    "autoload-dev" : {
+        "psr-4": {
+            "Midstackdev\\Press\\Tests\\": "tests/"
+        }
     }
 }
